Remove "/./" from URLs when adding to classloader to avoid duplicates of the same file with different paths, change INSTALL.md to make it clear that java parameters are optional.
Signed-off-by: Ross Allan <rallanpcl@gmail.com>